--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,29 @@
-# History files
-.Rhistory
-.Rapp.history
+# Binary files
+*.o
+*.so
+.httr-oauth
+*.dll
 
-# Session Data files
+# Documents
+.Rd2pdf*
+quanteda.pdf
+API_notes.md
+
+
+# Tests
+/revdep/.cache.rds
+*Rcheck*
+
+# R or RStudio
+*.Rproj
+.Rproj.user
+.Rhistory
 .RData
 
-# Example code in package build process
-*-Ex.R
+# OS
+__MACOSX
+.DS_Store
 
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-/*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+# Vignette
+**_cache/
+/inst/doc
