--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,18 +4,18 @@ Title: quanteda textmodel extensions for the wordshoal textmodel
 Description: Extends quanteda to provide an implementation of the Lauderdale and Herzog (2016) "wordshoal" model.
 Authors@R: c( person("Benjamin", "Lauderdale", email = "B.E.lauderdale@lse.ac.uk", role = c("aut")),
     person("Kenneth", "Benoit", email = "kbenoit@lse.ac.uk", role = c("ctb", "cre")) )
+Maintainer: Benjamin Lauderdale <B.E.lauderdale@lse.ac.uk>
 License: GPL-3
 Depends:
-    quanteda
+    quanteda,
+    methods
 Imports: 
-Suggests: ,
+Suggests:
     covr
 URL: http://github.com/kbenoit/wordshoal
 Encoding: UTF-8
 BugReports: https://github.com/kbenoit/wordshoal/issues
 LazyData: TRUE
-VignetteBuilder: 
 Collate:
     textmodel_wordshoal.R
 RoxygenNote: 6.0.1
-SystemRequirements: 
