--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,9 @@
 S3method(summary,textmodel_wordshoal_fitted)
 S3method(textmodel_wordshoal,dfm)
 export(textmodel_wordshoal)
+importFrom(quanteda,as.dfm)
+importFrom(quanteda,docnames)
+importFrom(quanteda,ndoc)
+importFrom(quanteda,textmodel_wordfish)
 importFrom(stats,dgamma)
 importFrom(stats,dnorm)
