--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Depends:
     R (>= 3.3.0),
     quanteda
 Suggests:
-    covr
+    covr,
+    testthat
 URL: http://github.com/kbenoit/wordshoal
 Encoding: UTF-8
 BugReports: https://github.com/kbenoit/wordshoal/issues
