--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(summary,textmodel_wordshoal_fitted)
 S3method(textmodel_wordshoal,dfm)
 export(textmodel_wordshoal)
 importFrom(quanteda,as.dfm)
+importFrom(quanteda,colSums)
 importFrom(quanteda,docnames)
 importFrom(quanteda,ndoc)
 importFrom(quanteda,textmodel_wordfish)
