--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Imports:
     quanteda,
     stringi
 Suggests:
+    testthat,
     covr
 URL: http://github.com/kbenoit/wordshoal
 Encoding: UTF-8
