--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,8 @@ S3method(summary,textmodel_wordshoal)
 S3method(textmodel_wordshoal,dfm)
 export(textmodel_wordshoal)
 import(quanteda)
+importFrom(quanteda.textmodels,as.statistics_textmodel)
+importFrom(quanteda.textmodels,as.summary.textmodel)
+importFrom(quanteda.textmodels,textmodel_wordfish)
 importFrom(stats,dgamma)
 importFrom(stats,dnorm)
